# testing

./: .env.example  .gitignore  AUTHORING.md  COVERAGE.md  DESIGN-MODE2.md  SPEC.md  conftest.py  pyproject.toml
.plan/3b186a25-6c27-4167-ba46-9743c56c1141/: DECISIONS.md  implementation_approach.md  validation.md
ci/: run-meta-validation.sh
examples/: assessment_readonly.mvs.yaml
examples/reference_migration/: migration.mvs.yaml
fixtures/: load.py  load_elt.py  load_epoch_edge.py  load_merge.py  load_negative.py  seed_data.py  stage_files.py
fixtures/dags/: broken_dag.py  sample_pipeline.py
lib/: __init__.py  bqload.py  build.py  canonicalize.py  cli.py  config.py  dag.py  egress.py  engines.py  epoch.py  fk.py  gcp_auth.py  harness.py  merge.py  mvs.py  parity.py  perf.py  reconcile.py  registry.py  report.py  scd2.py  schema.py  synth.py  transform_diff.py  transform_unit.py
specs/: _gen_schema_apply.py  _gen_schema_integration.py  _gen_schema_typemap.py  schema_apply.mvs.yaml  schema_integration.mvs.yaml  schema_performance.mvs.yaml  schema_typemap.mvs.yaml
sql/ddl/: 02-staging-sqoop-mirrors.sql  03-staging-delta-feeds.sql  04-staging-file-feeds.sql  05-ods-cleanse.sql  06-ods-delta-scd2.sql  07-ods-acid.sql  08-dm-tables.sql
sql/seed/: seed_agg_agent_daily.sql  seed_agg_billing_monthly.sql  seed_fact_agent_activity.sql  seed_fact_billing_line.sql  seed_fact_interaction.sql  seed_fact_queue_interval.sql  seed_scd2.sql
tests/: test_build_guard.py  test_config_failfast.py  test_readonly.py  test_spec_validation.py
tests/bq_to_bq/: bq_to_bq.mvs.yaml  bq_to_bq_negative.mvs.yaml  test_bq_to_bq.py
(+60 files in other folders)
